# audio-xy-oscilloscope

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
.github/workflows/: build.yml
